--- a/Determinants.tex
+++ b/Determinants.tex
@@ -12,7 +12,9 @@
 \usepackage{blindtext}
 \graphicspath{{pics/}}
 
-\usetheme{Warsaw}
+% \usetheme{Warsaw}
+\usetheme{Frankfurt}
+% \usetheme{Madrid}
 
 \title{Determinants}
 \subtitle{Group 12}
