--- a/Determinants.tex
+++ b/Determinants.tex
@@ -88,7 +88,7 @@
         where $\mathfrak{S}_n$ is the set of permutations length $n$.
     \end{block}
 
-    Computing the determinant using this method is slow with runtime $\mathcal{O}((N+1)!)$
+    Computing the determinant using this method is slow with runtime $\mathcal{O}((N+1)!)$.
 \end{frame}
 
 \subsection{Gaussian Elimination}
@@ -107,7 +107,7 @@
     Conventional Gaussian elimination requires division, meaning that solutions maybe inexact,
     so precision is lost.
 
-    This is addressed by...
+    This is addressed by\dots
 
 \end{frame}
 
@@ -136,11 +136,11 @@
     \[
         \mu(X) =
         \begin{bmatrix}{}
-            \mu_{2,2} - x_{2,2} & x_{1,2}             & \ldots & x_{1,n-1}           & x_{1,n} \\
-            0                   & \mu_{3,3} - x_{3,3} & \ldots & x_{2,n-1}           & x_{2,n} \\
+            \mu_{2,2} - x_{2,2} & x_{1,2}             & \cdots & x_{1,n-1}           & x_{1,n} \\
+            0                   & \mu_{3,3} - x_{3,3} & \cdots & x_{2,n-1}           & x_{2,n} \\
             \vdots              & \vdots              & \ddots & \vdots              & \vdots \\
-            0                   & 0                   & \ldots & \mu_{n,n} - x_{n,n} & x_{n-1,n} \\
-            0                   & 0                   & \ldots & 0                   & 0
+            0                   & 0                   & \cdots & \mu_{n,n} - x_{n,n} & x_{n-1,n} \\
+            0                   & 0                   & \cdots & 0                   & 0
         \end{bmatrix}
     \]
     and $F_A : \mathrm{Mat}(n, \mathbb{R}) \to \mathrm{Mat}(n, \mathbb{R})$, with $A \in \mathrm{Mat}(n, \mathbb{R})$
@@ -157,27 +157,27 @@
 
     \begin{block}{Bird's Theorem}
         \[
-            F_A^{n-1}(A) = 
+            F_A^{n-1}(A) =
             \begin{bmatrix}{}
-                d      & 0      & \ldots & 0 \\
-                0      & 0      & \ldots & 0 \\
+                d      & 0      & \cdots & 0 \\
+                0      & 0      & \cdots & 0 \\
                 \vdots & \vdots & \ddots & \vdots \\
                 0      & 0      & 0      & 0
             \end{bmatrix}
-            \text{with} \ d = 
+            \text{with} \ d =
             \begin{cases}{}
                 |A|  & \text{odd} \ n \\
                 -|A| & \text{even} \ n \\
             \end{cases}
         \]
     \end{block}
-    
+
     \begin{itemize}
 
         \item Enables the \emph{division-free} computation of determinants in $\mathcal{O}(n\cdot M(n))$
             where $M(n)$ is the runtime complexity of the matrix multiplication algorithm used.
 
-        \item Given a good matrix multiplication algorithm with runtime $\mathcal{O}(n^{2.376})$ 
+        \item Given a good matrix multiplication algorithm with runtime $\mathcal{O}(n^{2.376})$
             (\emph{Coppersmith-Winograd}),
             this algorithm runs in $\mathcal{O}(n^{3.376})$.
 
