--- a/Determinants.tex
+++ b/Determinants.tex
@@ -66,10 +66,10 @@
 
 \begin{frame}{Leibniz formula}
     \begin{block}{Definition}
-        The Leibniz formula defines the determinant of an $n \times n$ matrix $A$ as
+        The Leibniz formula defines the determinant of $A \in \mathbb{M}(n)$ as
         \[
             |A| = \sum_{\sigma \in \mathfrak{S}_n} \mathrm{sgn}(\sigma)
-            \product_{i=1}^n a_{i \sigma(i)}
+            \prod_{i=1}^n a_{i \sigma(i)}
         \]
         where $\mathfrak{S}_n$ is the set of permutations length $n$.
     \end{block}
@@ -84,7 +84,7 @@
     for computing determinants of $3 \times 3$ matrices and larger.
 
     \begin{block}{Theorem}
-        The formula for the (1st row) Laplace expansion of $A \in \mathrm{Mat}(n, \mathbb{R})$
+        The formula for the (1st row) Laplace expansion of $A \in \mathbb{M}(n)$
         is given as:
         \[
             |A| = \sum_{j=1}^n a_{1j}\cdot C_{1j}
@@ -108,7 +108,7 @@
     \begin{center}{}
         \includegraphics[height=180]{laplace-lu}
     \end{center}
-    
+
     The difference between exponential and polynomial-time functions is clear.
     % Let's look at a better algorithm.
 \end{frame}
@@ -169,7 +169,7 @@
 \subsection{Bird's algorithm}
 
 \begin{frame}{Bird's algorithm}
-    Define $\mu : \mathrm{Mat}(n, \mathbb{R}) \to \mathrm{Mat}(n, \mathbb{R})$:
+    Define $\mu : \mathbb{M}(n) \to \mathbb{M}(n)$:
     \[
         \mu(X) =
         \begin{bmatrix}{}
@@ -180,8 +180,8 @@
             0                   & 0                   & \cdots & 0                   & 0
         \end{bmatrix}
     \]
-    and $F_A : \mathrm{Mat}(n, \mathbb{R}) \to \mathrm{Mat}(n, \mathbb{R})$,
-    with $A \in \mathrm{Mat}(n, \mathbb{R})$
+    and $F_A : \mathbb{M}(n) \to \mathbb{M}(n)$,
+    with $A \in \mathbb{M}(n)$
     \begin{align*}{}
         F_A(X)    & = \mu(X)\cdot A \\
         F_A^2(X)  & = \mu(F_A(X)) \cdot A \\
@@ -238,27 +238,32 @@
 \subsection{Summary of determinant algorithms}
 
 \begin{frame}{Summary of determinant algorithms}
-    \begin{tabular}{l l l}
-        \toprule
-        \emph{Algorithm}     & \emph{Runtime}           & \emph{Exact} \\
-        \midrule
-        Leibniz Formula      & $\mathcal{O}((N+1)!)$    & Yes \\
-        Laplace Expansion    & $\mathcal{O}(N!)$        & Yes \\
-        LU Decomposition     & $\mathcal{O}(N^3)$       & No \\
-        Gaussian Elimination & $\mathcal{O}(N^3)$       & No \\
-        Bareiss' Algorithm   & $\mathcal{O}(N^3)$       & Yes \\
-        Bird's Algorithm     & $\mathcal{O}(N^{3.376})$ & Yes \\
-        \bottomrule
-    \end{tabular}
+    \begin{center}{}
+        \begin{tabular}{l l l}
+            \toprule
+            \emph{Algorithm}     & \emph{Runtime}           & \emph{Exact} \\
+            \midrule
+            Leibniz formula      & $\mathcal{O}((N+1)!)$    & Yes \\
+            Laplace expansion    & $\mathcal{O}(N!)$        & Yes \\
+            LU decomposition     & $\mathcal{O}(N^3)$       & No \\
+            Gaussian elimination & $\mathcal{O}(N^3)$       & No \\
+            Bareiss' algorithm   & $\mathcal{O}(N^3)$       & Yes \\
+            Bird's algorithm     & $\mathcal{O}(N^{3.376})$ & Yes \\
+            \bottomrule
+        \end{tabular}
+    \end{center}
 
 \end{frame}
+
+\subsection{How fast is Maple's implementation?}
 
 \begin{frame}{How fast is Maple's built-in determinant function?}
     \begin{center}{}
         \includegraphics[height=180]{gauss-maple}
     \end{center}
-    
-    Maple's optimisation means a fair comparison cannot be made.
+
+    Very. Maple's optimisation means a fair comparison cannot be made.
+
 \end{frame}
 
 \begin{frame}{}
